--- a/src/assets/css/Landing.css
+++ b/src/assets/css/Landing.css
@@ -45,3 +45,18 @@ h1 {
   }
 }
 
+@media screen and (max-width: 426px) {
+  .landing-page {
+    flex-direction: column;
+    height: 100%;
+  }
+
+  .left-side {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 0 auto;
+  }
+}
